tests/ui/underscore-lifetime/where-clause-inherent-impl-underscore.rust2015.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/where-clause-inherent-impl-underscore.rs:13:19
   |
LL |     T: WithRegion<'_>
   |                   ^^ `'_` is a reserved lifetime name

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0637`.
